add flexbe msg to string republisher

--- a/movel_flexbe/package.xml
+++ b/movel_flexbe/package.xml
@@ -11,6 +11,7 @@
   <depend>roscpp</depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
+  <depend>flexbe_msgs</depend>
   <depend>flexbe_behavior_engine</depend>
 
   <export>
