--- a/movel_flexbe/CMakeLists.txt
+++ b/movel_flexbe/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  flexbe_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -52,4 +53,9 @@ include_directories(
 
 install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
+
+catkin_install_python(
+  PROGRAMS scripts/flexbe_msg_republisher.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
